--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.10.0",
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.1.4",
+    "winston": "^3.8.2"
   }
 }
